--- a/Data Exploration/hw01_nasaweather.Rmd
+++ b/Data Exploration/hw01_nasaweather.Rmd
@@ -24,7 +24,8 @@ library(nasaweather)
 You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
-
+head(storms)
+str(storms)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
