--- a/Data Exploration/hw01_nasaweather.Rmd
+++ b/Data Exploration/hw01_nasaweather.Rmd
@@ -5,24 +5,17 @@ date: "2018 Sep 15th"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
 ## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 /* Install the nasaweather package firstly*/
 ```{r cars}
 library(nasaweather)
 ```
 
-## Including Plots
+## Data set: Storm
 
-You can also embed plots, for example:
-/* Information of data set storms of package nasaweather*/
+Information of data set storms of package nasaweather
 ```{r pressure, echo=FALSE}
 str(storms)
 
@@ -33,9 +26,8 @@ nrow(storms)
 
 summary(storms)
 ```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-/* Calculating the variance with one method and var function  of  pressure which belongs to storm data set*/
+## Variance of pressure
+ Calculating the variance with one method and var function  of  pressure which belongs to storm data set
 ```{r}
 na_pres<- storms$pressure
 length(na_pres)
@@ -48,5 +40,11 @@ variance<- (sum(diffs^2)/(length(na_pres)-1))
 variance
 
 var(na_pres)
+```
+## Plots
+Indicate the length of every storm of each year 
+```{r}
+str(storms)
+plot(storms$year,storms$day)
 ```
 
